2010-09-16  Per Bothner  <per@bothner.com>

	* ApplyExp.java (visitArgs): Remove version that takes argsInlined.
	* InlineCalls.java (maybeInline): The validateApply methods no
	longer take a boolean argsInlined parameter.

	* Expression.java (VALIDATED): New flag.
	(NEXT_AVAIL_FLAG): Update accordingly.
	(validateApply): Remove no-longer-used argsInlined parameter.
	* ApplyExp.java (visitArgs): New method without argsInlined parameter.
	* LambdaExp.java (INLINE_ONLY): Renumber so it doesn't conflict
	with VALIDATED.
	(validateApply): Update to not use argsInlined.
	* QuoteExp.java: Likewise.
	* ReferenceExp.java: Likewise.
	* InlineCalls.java (visit): Check and set VALIDATED flag.
	Short-circuit if VALIDATED was set.
	(maybeInline):  Remove no-longer-used argsInlined parameter.

2010-09-15  Per Bothner  <per@bothner.com>

	* ModuleExp.java (evalModule1, evalModule2): Use Environment's
	setSaveCurrent/restoreCurrent methods.

2010-09-04  Per Bothner  <per@bothner.com>

	* Compilation.java (inlineOk): In interactive mode don't inline
	non-self calls to top-level functions.
	* LambdaExp.java (visit): Set and restore Compilation's curLambda.
	* ProcInitializer.java (emitLoadModuleMethod): Allow rebinding
	only if there is a Declaration.  (Probably redundant change.)
	* ScopeExp.java (topLevel): New method.

2010-09-02  Per Bothner  <per@bothner.com>

	In interactive mode allow re-binding existing procedures.
	* ProcInitializer.java (emitLoadModuleMethod): If interactive, check
	if there is an existing ModuleMethod binding, and if so re-use it.
	* ModuleMethod.java (init): New method.

2010-09-01  Per Bothner  <per@bothner.com>

	* LambdaExp.java (allocParameters): Remove some obsolate code - we
	no longer use an argsArray solely because we have have > 4 parameters
	in the function method, only apply methods.

2010-08-31  Per Bothner  <per@bothner.com>

	* Compilation.java (fewerClass): Remove unused flag.
	Update accordingly.
	* LambdaExp.java: Likewise.
