@@ -1,3 +1,9 @@
+2010-09-17  Per Bothner  <per@bothner.com>
+
+	* QuoteExp.java (getInstance): New factory method taking SourceLocator.
+
+	* InlineCalls.java (visit): Pass SourceLocator eror error.
+
 2010-09-16  Per Bothner  <per@bothner.com>
 
 	* ApplyExp.java (visitArgs): Remove version that takes argsInlined.
